# blue

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  blue.toml  install.ps1  install.sh
.blue/hooks/: commit-msg
.github/workflows/: docs.yaml  release.yaml  tests.yaml
crates/blue-config/: Cargo.toml
crates/blue-config/src/: file.rs  lib.rs
crates/blue-config/src/git/: commit_check.rs  mod.rs
crates/blue-git/: Cargo.toml
crates/blue-git/src/: git_hooks.rs  lib.rs  presets.rs
crates/blue-git/src/commit_check/: find_case.rs  merge_config.rs  mod.rs  parse_commit.rs
crates/blue-git/src/commit_check/presets/: default.rs  mod.rs
crates/blue-git/src/commit_check/rules/: body.rs  commit_type.rs  footer.rs  header.rs  mod.rs  scope.rs  subject.rs
crates/blue-log/: Cargo.toml
crates/blue-log/src/: lib.rs
docs/: index.md  installation.md  introduction.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/commands/: argument-syntax.md  check.md
docs/commands/blue/: bin.md  boostrap.md  bootstrap.md  setup.md  version.md
docs/commands/global/: touch.md
docs/commands/misc/: set.md
docs/commands/workspace/: add.md  analyze.md  check.md  clean.md  docker.md  fix.md  init.md  remove.md  setup.md  update.md
docs/configuration/: blue-project-toml.md  blue-toml.md
src/: config.rs  main.rs
src/commands/: bin.rs  bootstrap.rs  check.rs  clean.rs  git.rs  mod.rs  setup.rs  version.rs
src/commands/git/: commit_check.rs  git.rs  mod.rs  presets.rs
