[package]
name = "blue"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
home = "0.5.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
toml = "0.8.8"

[profile.release]
lto = true
codegen-units = 1
