[workspace]
members = [".", "crates/blue-config", "crates/blue-git"]

[workspace.package]
version = "0.0.1"
license = "GPL-3.0"
edition = "2021"
homepage = "https://github.com/slekup/blue"
repository = "https://github.com/slekup/blue"
authors = ["Slekup <slekupvimplyrataqq@protonmail.com>"]


[package]
name = "blue-cli"
readme = "README.md"
documentation = "https://blue.slekup.com"
description = "Fast and extensible workspace manager"
keywords = ["workspace", "manager", "cli", "fast", "extensible"]
categories = ["cli", "workspace", "manager", "tool"]
default-run = "blue"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[workspace.dependencies]
blue_config = { path = "crates/blue-config" }
blue_git = { path = "crates/blue-git" }
blue_log = { path = "crates/blue-log" }
regex = "1.10.2"
tracing = "0.1.40"


[[bin]]
name = "blue"
path = "src/main.rs"


[profile.release]
lto = true
codegen-units = 1

[dependencies]
blue_config = { workspace = true }
blue_git = { workspace = true }
blue_log = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
glob = "0.3.1"
home = "0.5.5"
toml = "0.8.8"
serde_json = "1.0.108"
