[package]
name = "blue_config"
description = "Handles configuration for Blue"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
