[package]
name = "blue_config"
description = "Handles configuration for Blue"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
tracing = { workspace = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
